mejoras generales del proyecto